--- a/configurator_app.html
+++ b/configurator_app.html
@@ -1,3 +1,4 @@
+<!-- configurator_app-->
 <!-- Copyright (C) 2020  <name of author>
 
 	This program is free software: you can redistribute it and/or modify
@@ -30,40 +31,44 @@
 <link rel="stylesheet" href="configurator_app.css" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Lexend+Tera" rel="stylesheet"> 
 
-
-<script type="text/javascript" src="..\..\dist\b4w.js"></script>
+<!-- local: -->
+<!-- <script type="text/javascript" src="..\..\dist\b4w.js"></script> --> 
+<!-- deploy: -->
+<script type="text/javascript" src="b4w.simple.min.js"></script>
 
 <script type="text/javascript" src="configurator_app.js"></script>
 
 </head>
 
-<body>
+<body>	
 	<div class="controls-container" id="controls-container">
 
-		<div style="color: white;">
-			Mask Configurations
+		<div class="heading1" style="color: white;">
+			Masken Designer
 		</div>
 		<br>
 		<div class="head">
-		<label class="switch">
-			<input type="checkbox" id="face_switch" checked="true">
-			<span style="color:white">Show Head</span>
-		</label>
+			<label class="switch">
+				<input type="checkbox" id="face_switch" checked="true">
+				<span style="color:white">Gesicht anzeigen</span>
+			</label>
 		</div>
+		<div class="row" ></div>
+		<div class="row" ></div>
 
 
 		<div class="ui_block" id="fabric" >
-			<div style="color: white;">
-				Outside Fabric
+			<div class="heading2" style="color: white;">
+				Äußere Stoffschicht
 				<br>
-				<label class="switch">
+				<!-- <label class="switch">
 					<input type="checkbox" id="2color_switch" checked="true">
 					<span style="color:white">2 colors</span>
-					</label>
+				</label> -->
 			</div>
 			<div class="row"></div>
 			<div class="color_div"id="left_side">
-				<p style="color:white">Left Side</p>
+				<p style="color:white">Linke Seite</p>
 				<label class="color_inline_label">
 					<input type="radio" name="left_color" class="custom_radio_btn" id="left_white_btn">
 					<div class="color_btn" style="background-color: #F3F3F3;"></div>
@@ -77,10 +82,6 @@
 					<div class="color_btn" style="background-color: #6C1600;"></div>
 				</label>
 				<label class="color_inline_label">
-					<input type="radio" name="left_color" class="custom_radio_btn" id="left_tanne_green_btn">
-					<div class="color_btn" style="background-color: #002600;"></div>
-				</label>
-				<label class="color_inline_label">
 					<input type="radio" name="left_color" class="custom_radio_btn" id="left_royal_blue_btn">
 					<div class="color_btn" style="background-color: #1929CB;"></div>
 				</label>
@@ -89,7 +90,7 @@
 					<div class="color_btn" style="background-color: #192459;;"></div>
 				</label>
 				<label class="color_inline_label">
-					<input type="radio" name="left_color" class="custom_radio_btn" id="left_dark_grey_btn" checked="true">
+					<input type="radio" name="left_color" class="custom_radio_btn" id="left_dark_grey_btn">
 					<div class="color_btn" style="background-color: #646464;"></div>
 				</label>
 				<label class="color_inline_label">
@@ -99,7 +100,7 @@
 			</div>
 
 			<div class="color_div" id="right_side">
-				<p style="color:white">Right Side</p>
+				<p style="color:white">Rechte Seite</p>
 
 				<label class="color_inline_label">
 					<input type="radio" name="right_color" class="custom_radio_btn" id="right_white_btn" >
@@ -114,10 +115,6 @@
 					<div class="color_btn" style="background-color: #6C1600;"></div>
 				</label>
 				<label class="color_inline_label">
-					<input type="radio" name="right_color" class="custom_radio_btn" id="right_tanne_green_btn">
-					<div class="color_btn" style="background-color: #002600;"></div>
-				</label>
-				<label class="color_inline_label">
 					<input type="radio" name="right_color" class="custom_radio_btn" id="right_royal_blue_btn">
 					<div class="color_btn" style="background-color: #1929CB;"></div>
 				</label>
@@ -126,7 +123,7 @@
 					<div class="color_btn" style="background-color: #192459;;"></div>
 				</label>
 				<label class="color_inline_label">
-					<input type="radio" name="right_color" class="custom_radio_btn" id="right_dark_grey_btn" checked="true">
+					<input type="radio" name="right_color" class="custom_radio_btn" id="right_dark_grey_btn">
 					<div class="color_btn" style="background-color: #646464;"></div>
 				</label>
 				<label class="color_inline_label">
@@ -137,8 +134,8 @@
 		</div>
 
 		<div class="ui_block" id="Band" >
-			<div style="color: white;">
-				Band
+			<div class="heading2" style="color: white;">
+				Schrägband
 			</div>
 			<div class="row" ></div>
 			
@@ -149,7 +146,7 @@
 						<div class="color_btn" style="background-color: #F3F3F3;"></div>
 					</label>
 					<label class="color_inline_label">
-						<input type="radio" name="band_color" class="custom_radio_btn" id="band_black_btn" checked="true">
+						<input type="radio" name="band_color" class="custom_radio_btn" id="band_black_btn">
 						<div class="color_btn"  style="background-color: #000000;"></div>
 					</label>
 				</div>
@@ -157,13 +154,13 @@
 		</div>
 
 		<div class="ui_block" id="Cord" >
-			<div style="color: white;">
-				Cord
+			<div class="heading2" style="color: white;">
+				Gummiband
 			</div>
 			<div class="row" ></div>
 			<div class="color_div">
 				<label class="color_inline_label">
-					<input type="radio" name="cord_color" class="custom_radio_btn" id="cord_white_btn" checked="true">
+					<input type="radio" name="cord_color" class="custom_radio_btn" id="cord_white_btn">
 					<div class="color_btn" style="background-color: #F3F3F3;"></div>
 				</label>
 				<label class="color_inline_label">
@@ -174,13 +171,13 @@
 		</div>
 
 		<div class="ui_block" id="Cord" >
-			<div style="color: white;">
-				Stitch
+			<div class="heading2" style="color: white;">
+				Faden
 			</div>
 			<div class="row"></div>
 			<div class="color_div">
 				<label class="color_inline_label">
-					<input type="radio" name="stitch_color" class="custom_radio_btn" id="stitch_white_btn" checked="true">
+					<input type="radio" name="stitch_color" class="custom_radio_btn" id="stitch_white_btn">
 					<div class="color_btn" style="background-color: #F3F3F3;"></div>
 				</label><label class="color_inline_label">
 					<input type="radio" name="stitch_color" class="custom_radio_btn" id="stitch_black_btn">
@@ -189,10 +186,15 @@
 			</div>
 		</div>
 	</div>
+	<div class="footer">
+		<div class="cart">
+			<button type="button" class="cart_button" id="add_to_cart">In den Einkaufswagen</button>
+			<button type="button" class="cart_button" id="go_to_cart">Zur Kasse</button> 
+		</div>
+	</div>
 
+	<div id="main_canvas_container"></div>
 
-
-  	<div id="main_canvas_container"></div>
 </body>
 
 </html>
